@@ -5,12 +5,18 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 23:49:32 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 23:59:03 +0800</lastBuildDate>
 <item>
   <title>健身房播放音樂要付錢！韓國音樂著作權協會轉變策略：不再打官司，教你如何合法使用</title>
   <link>https://www.famechos.me/news/健身房播放音樂要付錢！韓國音樂著作權協會轉變策略：不再打官司，教你如何合法使用.html</link>
   <description>韓國音樂著作權協會KOMCA計劃改變策略不再對不遵守音樂版權法規的健身房業主採取法律行動而是通過積極宣傳提高版權意識KOMCA主席ChuGayeoul最近訪問了全國11個負責向健身房收取音樂版權費的中心收集現場投訴他認為創造一個版...</description>
   <category>K-Pop</category>
   <pubDate>Fri, 11 Oct 2024 23:49:32 +0800</pubDate>
+</item><item>
+  <title>健身房播放音樂要付錢！韓國音樂著作權協會轉變策略：不再打官司，教你如何合法使用</title>
+  <link>https://www.famechos.me/news/健身房播放音樂要付錢！韓國音樂著作權協會轉變策略：不再打官司，教你如何合法使用.html</link>
+  <description>韓國流行音樂Kpop在全球市場的持續擴張之際另一種音樂類型Trot正在國內音樂界迅速崛起一些Trot歌手的成功促使主要的Kpop娛樂公司開始嘗試將Trot與Kpop結合起來Trot是自1930年代以來一直是韓國流行音樂的一部分其特點是充滿活力的節奏和豐富的顫音歌詞往往迎合老一輩人的情...</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 23:59:03 +0800</pubDate>
 </item></channel>
 </rss>
