@@ -1,0 +1,279 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop\u65b0\u9769\u547d\uff01Trot\u8207K-pop\u878d\u5408\u6380\u8d77\u97d3\u570b\u97f3\u6a02\u65b0\u6d6a\u6f6e\uff0c\u5a1b\u6a02\u516c\u53f8\u722d\u76f8\u6436\u7058", "description": "K-pop\u65b0\u9769\u547d\uff01Trot\u8207K-pop\u878d\u5408\u6380\u8d77\u97d3\u570b\u97f3\u6a02\u65b0\u6d6a\u6f6e\uff0c\u5a1b\u6a02\u516c\u53f8\u722d\u76f8\u6436\u7058", "url": "https://www.famechos.me/news/K-pop\u65b0\u9769\u547d\uff01Trot\u8207K-pop\u878d\u5408\u6380\u8d77\u97d3\u570b\u97f3\u6a02\u65b0\u6d6a\u6f6e\uff0c\u5a1b\u6a02\u516c\u53f8\u722d\u76f8\u6436\u7058.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T23:58:55.735086+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，娛樂公司爭相搶灘.html"/>
+<meta name="description" content="韓國音樂界出現新浪潮！Trot與K-pop融合掀起新革命，娛樂公司爭相搶灘，帶來耳目一新的聽覺體驗。">
+
+<meta name="keywords" content="K-pop新革命，Trot，K-pop融合，韓國音樂新浪潮，娛樂公司，搶灘">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，娛樂公司爭相搶灘.html" />
+        <meta property="og:title" content="K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，娛樂公司爭相搶灘" />
+        <meta property="og:description" content="K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，娛樂公司爭相搶灘" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，娛樂公司爭相搶灘" />
+        <meta property="twitter:description" content="K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，娛樂公司爭相搶灘" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，娛樂公司爭相搶灘</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>韓國流行音樂（K-pop）在全球市場的持續擴張之際，另一種音樂類型——Trot——正在國內音樂界迅速崛起。一些Trot歌手的成功，促使主要的K-pop娛樂公司開始嘗試將Trot與K-pop結合起來。</p>
+<p>Trot是自1930年代以來一直是韓國流行音樂的一部分，其特點是充滿活力的節奏和豐富的顫音，歌詞往往迎合老一輩人的情感。然而，近年來，Trot歌手的選秀節目成功，引發了年輕Trot藝人的崛起，他們的受歡迎程度與K-pop明星不相上下，吸引了更廣泛的觀眾。</p>
+<p>林英雄是當今最受歡迎的Trot歌手之一，他在2020年參加朝鮮電視台的《明天是Mr.Trot》後一舉成名。他成為第一位在國內音樂串流網站Melon上累積播放量超過100億的個人歌手，也是第一位在2022年甜瓜音樂獎上獲得兩項大獎的Trot歌手。最近，林英雄在首爾世界盃體育場舉行了個人演唱會，兩天內吸引了約10萬名觀眾。</p>
+<p>一些K-pop娛樂公司似乎對這種Trot復興趨勢感興趣，並開始模糊Trot與K-pop之間的界限。其中一位熱衷於這種新趨勢的是來自美國的19歲K-pop粉絲Emily，她希望只透露自己的名字。</p>
+<p>有一個新的K-pop男團即將出道，他們將是一個Trot樂團，我真的很興奮。我知道Trot主要與老一輩人相關，但我聽過一些Trot歌曲，真的很好！</p>
+<p>SM娛樂計劃今年晚些時候與朝鮮電視台合作推出一個Trot偶像團體。該團體名為Mytro，由五名成員組成：曾參加朝鮮電視台選秀節目《明天是Mr.Trot》的林采炫；前MR.MR成員泰；演員徐宇赫和鄭允在；以及曾在SM娛樂接受K-pop培訓的日本籍成員Shohei。</p>
+<p>朝鮮電視台將播出一檔新的綜藝節目《Falling for a Trot-dol：Lovestruckonas》，記錄Mytro成員出道前的旅程。該節目也將在韓國和日本播出，這表明Mytro將在海外發展。</p>
+Trot和K-pop都有堅實的粉絲群，我們希望這兩種類型的結合能夠創造出協同效應。SM娛樂一直在嘗試跨類型的音樂，從古典音樂到電子舞曲和R&B，所以這可以被視為其中的一部分。<h2>K-pop與Trot融合：新趨勢還是昙花一現？</h2>
+<p>K-pop娛樂公司JYP娛樂宣布計劃通過其子公司INNIT娛樂選拔新的Trot人才。這種新趨勢引起了K-pop粉絲的熱議。</p>
+<p>一位20多歲的韓國K-pop粉絲表示，Trot與K-pop的融合讓她既期待又擔憂。她認為，主要消費Trot的聽眾與K-pop娛樂公司傳統上針對的受眾有很不同的偏好，不知道這個團體是否能夠滿足特定消費群體的需求。</p>
+<p>然而，她也指出，Trot與K-pop之間有一個相似之處，那就是它們都以強大的粉絲參與度而聞名，所以這種融合可能會成功。Trot可能會吸引全球觀眾，因為它是一種他們可能從未聽過的類型。</p>
+<p>另一位K-pop粉絲Emily認為，K-pop從業者應該嘗試在歌曲中加入更多的韓國元素。她希望公司能夠專注於保持K-pop的特有聲音，而不是試圖迎合西方觀眾。Emily還建議，K-pop的擴張應該來自於韓國的不同音樂類型，如Trot，而不是來自全球市場上流行的東西。</p>
+<ul>
+<li>Trot與K-pop的融合可能會成功，因為它們都以強大的粉絲參與度而聞名。</li>
+<li>Trot可能會吸引全球觀眾，因為它是一種他們可能從未聽過的類型。</li>
+<li>K-pop從業者應該嘗試在歌曲中加入更多的韓國元素。</li>
+</ul>
+<h2>流行音樂遇上演歌：韓國音樂的未來展望</h2>
+<p>林熙允評論指出，韓國流行音樂與演歌融合是行業面臨現有韓國流行音樂知識產權限制下探索的多個選擇之一。這種融合嘗試引發了是否仍可被視為韓國流行音樂的疑問。</p>
+<p>就像多國籍韓國流行音樂團體或本地化團體如Dear Alice和KATSEYE一樣，新的嘗試往往引發了對韓國流行音樂定義的思考。與此同時，主要娛樂公司似乎相信按照傳統韓國流行音樂公式創建的內容和知識產權已經達到了增長的極限。</p>
+<p>考慮到日本作為主要海外韓國流行音樂市場之一，具有與演歌相似的感情基調的演歌類型，演歌偶像似乎是一個值得嘗試的冒險。演歌在國內迄今為止取得的成功也令人鼓舞。</p>
+<table>
+<tr>
+<th>韓國流行音樂與演歌融合的優點</th>
+<th>韓國流行音樂與演歌融合的挑戰</th>
+</tr>
+<tr>
+<td>拓展韓國流行音樂的創作空間</td>
+<td>引發對韓國流行音樂定義的思考</td>
+</tr>
+<tr>
+<td>開拓新的海外市場</td>
+<td>主要娛樂公司的傳統公式創建內容的極限</td>
+</tr>
+</table>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hfXMvrOVr5M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/健身房播放音樂要付錢！韓國音樂著作權協會轉變策略：不再打官司，教你如何合法使用.html">健身房播放音樂要付錢！韓國音樂著作權協會轉變策略：不再打官司，教你如何合法使用</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
