@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 23:56:41 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 23:59:03 +0800</lastBuildDate>
 
   <item>
   <title>東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選</title>
@@ -31,5 +31,11 @@
   <description> 東京在這個秋季變得更加熱鬧。多摩川煙火大會和台場的天燈節點亮了東京的天空。莎莎街音樂節也準備好了舞蹈，東京迪士尼度假區正在為萬聖節做準備。  多摩川煙火大會 </description>
   <category>Others</category>
   <pubDate>Fri, 11 Oct 2024 23:56:41 +0800</pubDate>
+</item><item>
+  <title>健身房播放音樂要付錢！韓國音樂著作權協會轉變策略：不再打官司，教你如何合法使用</title>
+  <link>https://www.famechos.me/news/健身房播放音樂要付錢！韓國音樂著作權協會轉變策略：不再打官司，教你如何合法使用.html</link>
+  <description>韓國流行音樂Kpop在全球市場的持續擴張之際另一種音樂類型Trot正在國內音樂界迅速崛起一些Trot歌手的成功促使主要的Kpop娛樂公司開始嘗試將Trot與Kpop結合起來Trot是自1930年代以來一直是韓國流行音樂的一部分其特點是充滿活力的節奏和豐富的顫音歌詞往往迎合老一輩人的情...</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 23:59:03 +0800</pubDate>
 </item></channel>
 </rss>
