@@ -30,4 +30,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/健身房播放音樂要付錢！韓國音樂著作權協會轉變策略：不再打官司，教你如何合法使用.html</ns0:loc>
+    <ns0:lastmod>2024-10-11T23:59:03+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
